<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.chamika.research.smartprediction.MainActivity">
    <item
        android:id="@+id/action_suggest"
        android:orderInCategory="100"
        android:title="@string/menu_suggest_now"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cluster"
        android:orderInCategory="100"
        android:title="@string/menu_cluster_test"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cluster_accuracy"
        android:orderInCategory="100"
        android:title="@string/menu_cluster_accuracy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view"
        android:orderInCategory="100"
        android:title="@string/menu_view_data"
        app:showAsAction="never" />
</menu>
